1. Collection API Улучшения [#256665]